force-app/main/default/objects/ContentVersion/fields/DFDFW_Case_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Case_Document_Id__c</fullName>
    <description>This is the external Id field for the documents synced with city works. The field in city works / OIC is CA_REL_DOC_ID</description>
    <externalId>true</externalId>
    <label>Case Document Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>