force-app/main/default/objects/ContentVersion/fields/DFDFW_Synced_With_City_Works__c.field-meta.xml
<CustomField>
    <fullName>DFDFW_Synced_With_City_Works__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if the file has been synced with City Works.</description>
    <label>Synced With City Works</label>
    <type>Checkbox</type>
</CustomField>