force-app/main/default/objects/ContentVersion/fields/Field_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Field_Image_URL__c</fullName>
    <formula>LEFT( $Api.Enterprise_Server_URL_100, FIND( &quot;.com&quot;, $Api.Enterprise_Server_URL_100 ) + 4)&amp; &quot;sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB720BY480&amp;versionId=&quot; &amp; Id &amp; &quot;&amp;operationContext=CHATTER&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Image URL</label>
    <type>Text</type>
</CustomField>