force-app/main/default/objects/ContentVersion/fields/File_Category__c.field-meta.xml
<CustomField>
    <fullName>File_Category__c</fullName>
    <label>File Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Plan</fullName>
            </value>
            <value>
                <fullName>Approval Letter from Alderperson</fullName>
            </value>
            <value>
                <fullName>Certificate of Insurance</fullName>
            </value>
            <value>
                <fullName>Event Site Map</fullName>
            </value>
            <value>
                <fullName>Traffic Control Plan</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Food and Food Truck Vendor Names</fullName>
            </value>
            <value>
                <fullName>Alcohol Vendor Names</fullName>
            </value>
            <value>
                <fullName>Map of your Parade, Run/Walk/Ride Route</fullName>
            </value>
            <value>
                <fullName>Issued Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>