force-app/main/default/objects/ContentVersion/validationRules/DFDFW_Accepted_Files.validationRule-meta.xml
<ValidationRule>
    <fullName>DFDFW_Accepted_Files</fullName>
    <active>true</active>
    <errorConditionFormula>CreatedBy.Profile.Name ==  $Label.DFDFW_Community_Profile_Name
&amp;&amp; 
(
(
  FileType != &apos;PDF&apos; &amp;&amp;
  FileType != &apos;PNG&apos; &amp;&amp;
  FileType != &apos;JPG&apos; &amp;&amp;
  FileType != &apos;WORD_X&apos; &amp;&amp;
  FileType != &apos;POWER_POINT_X&apos; &amp;&amp;
  FileType != &apos;EXCEL_X&apos; &amp;&amp;
  FileType != &apos;CSV&apos; &amp;&amp;
  FileType != &apos;TEXT&apos; &amp;&amp;
  FileType != &apos;GIF&apos; &amp;&amp;
  FileType != &apos;WORD&apos; &amp;&amp;
  FileType != &apos;EXCEL&apos; &amp;&amp;
  FileType != &apos;POWER_POINT&apos; &amp;&amp;
  FileType != &apos;ZIP&apos; &amp;&amp;
  FileType != &apos;BMP&apos; &amp;&amp;
  FileType != &apos;JPEG&apos; &amp;&amp;
  FileType != &apos;TIFF&apos; &amp;&amp;
  FileType != &apos;RTF&apos;
)
|| 
ContentSize &gt; 8388608
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Unaccepted File Type or File Size</errorMessage>
</ValidationRule>